--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
   <main>
     <div class="img">
-      
+      <img src="images/illustration-woman-online-desktop.svg" alt="" id="woman">
+      <img src="./images/illustration-box-desktop.svg" alt="" id="box">
+      <img src="./images/bg-pattern-desktop.svg" alt="" id="background">
     </div>
+    
     <section class="faq">
       <h1>FAQ</h1>
       <div class="faq-item">
