Figured out how to make box overflow visible and the rest hidden (see html and related css in section.decor-image) Ran into problem on .hide not inheriting parent value Turns out inherit only inherits parent's set value, not the end value Solution: set the value to 100%

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 </head>
 <body>
   <main>
-    <div class="img">
-      <img src="images/illustration-woman-online-desktop.svg" alt="" id="woman">
+    <section class="decor-image">
       <img src="./images/illustration-box-desktop.svg" alt="" id="box">
-      <img src="./images/bg-pattern-desktop.svg" alt="" id="background">
-    </div>
+      <div class="hide">
+        <img src="images/illustration-woman-online-desktop.svg" alt="" id="woman">
+        <img src="./images/bg-pattern-desktop.svg" alt="" id="background">
+      </div>
+    </section>
     
     <section class="faq">
       <h1>FAQ</h1>
