Last commit did nothing, a shame Turns out what works is to make .hide position to relative, so that the children are bound to it, alas, overflow hidden works also learnt about z-indexing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <script src="main.js"></script>
   <title>Frontend Mentor | FAQ Accordion Card</title>
   
 </head>
@@ -14,7 +15,7 @@
     <section class="decor-image">
       <img src="./images/illustration-box-desktop.svg" alt="" id="box">
       <div class="hide">
-        <img src="images/illustration-woman-online-desktop.svg" alt="" id="woman">
+        <img src="./images/illustration-woman-online-desktop.svg" alt="" id="woman">
         <img src="./images/bg-pattern-desktop.svg" alt="" id="background">
       </div>
     </section>
@@ -58,7 +59,7 @@
           Yes! Send us a message and we'll process your request no questions asked.
         </div>
       </div>
-      
+
       <div class="faq-item">
         <div class="faq-title">
           Do you provide additional support?
