A lot of things to do, Added stars element before a review, but problem came up => refer to console

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="index.js"></script>
     <title>Frontend Mentor | Social proof section</title>
 
   </head>
