Upper part done, now onto testimonials section

--- a/index.html
+++ b/index.html
@@ -29,13 +29,22 @@
       </section>
         <section class="rating">
         <div class="rating-item">
-          Rated 5 Stars in Reviews
+          <div class="stars"></div>
+          <p class="review">
+            Rated 5 Stars in Reviews
+          </p>
         </div>
         <div class="rating-item">
-          Rated 5 Stars in Report Guru
+          <div class="stars"></div>
+          <p class="review">
+            Rated 5 Stars in Report Guru
+          </p>
         </div>
         <div class="rating-item">
-          Rated 5 Stars in BestTech
+          <div class="stars"></div>
+          <p class="review">
+            Rated 5 Stars in BestTech
+          </p>
         </div>
       </section>
 
