Final look, added mobile version

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
       </section>
 
       <section class="rating">
-        <div class="rating-item">
+        <div class="rating-item" id="item-1">
           <div class="stars"></div>
           <p class="review">
             Rated 5 Stars in Reviews
           </p>
         </div>
-        <div class="rating-item">
+        <div class="rating-item" id="item-2">
           <div class="stars"></div>
           <p class="review">
             Rated 5 Stars in Report Guru
           </p>
         </div>
-        <div class="rating-item">
+        <div class="rating-item" id="item-3">
           <div class="stars"></div>
           <p class="review">
             Rated 5 Stars in BestTech
@@ -49,7 +49,7 @@
       </section>
 
       <section class="testimony">
-        <article >
+        <article id="card-1">
           <div class="card-header">
             <img src="./images/image-colton.jpg" alt="Colton's profile picture">
             <div class="title">
@@ -65,7 +65,7 @@
             Excellent!
           </p>
         </article>
-        <article>
+        <article id="card-2">
           <div class="card-header">
             <img src="./images/image-irene.jpg" alt="Colton's profile picture">
             <div class="title">
@@ -80,7 +80,7 @@
             delighted with the simplicity of the purchase and the speed of delivery.
           </p>
         </article>
-        <article>
+        <article id="card-3">
           <div class="card-header">
             <img src="./images/image-anne.jpg" alt="Colton's profile picture">
             <div class="title">
