--- a/index.html
+++ b/index.html
@@ -7,50 +7,77 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | News homepage</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./styles/style.css">
+  <script src="main.js"></script>
+  
 </head>
 <body>
+  <nav>
+    <div id="logo">W.</div>
+    <ol>
+      <li>Home</li>
+      <li>New</li>
+      <li>Popular</li>
+      <li>Trending</li>
+      <li>Categories</li>
+    </ol>
+  </nav>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+  <article>
+    <h1>
+      The Bright Future of Web 3.0?
+    </h1>
+    <p>
+      We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+      But is it really fulfilling its promise?
+    </p>
+    <button>Read more</button>
+  </article>
 
-  The Bright Future of Web 3.0?
+  <aside>
+    <h2>
+      New 
+    </h2>
+    <h3>
+      Hydrogen VS Electric Cars
+      Will hydrogen-fueled cars ever catch up to EVs?
+    </h3>
+    <h3>
+      The Downsides of AI Artistry
+      What are the possible adverse effects of on-demand AI image generation?
+    </h3>
+    <h3>
+      Is VC Funding Drying Up?
+      Private funding by VC firms is down 50% YOY. We take a look at what that means.
+    </h3>
+  </aside>
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
+  <article>
+    <article>
+      <h3>
+        Reviving Retro PCs
+      </h3>
+      <p>
+        What happens when old PCs are given modern upgrades?
+      </p>
+    </article>
+    <article>
+      <h3>
+        Top 10 Laptops of 2022
+      </h3>
+      <p>
+        Our best picks for various needs and budgets.
+      </p>
+    </article>
+    <article>
+      <h3>
+        The Growth of Gaming
+      </h3>
+      <p>
+        How the pandemic has sparked fresh opportunities.
+      </p>
+    </article>
+  </article>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
