--- a/index.html
+++ b/index.html
@@ -12,72 +12,78 @@
   
 </head>
 <body>
-  <nav>
-    <div id="logo">W.</div>
-    <ol>
-      <li>Home</li>
-      <li>New</li>
-      <li>Popular</li>
-      <li>Trending</li>
-      <li>Categories</li>
-    </ol>
-  </nav>
-
-  <article>
-    <h1>
-      The Bright Future of Web 3.0?
-    </h1>
-    <p>
-      We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-      But is it really fulfilling its promise?
-    </p>
-    <button>Read more</button>
-  </article>
-
-  <aside>
-    <h2>
-      New 
-    </h2>
-    <h3>
-      Hydrogen VS Electric Cars
-      Will hydrogen-fueled cars ever catch up to EVs?
-    </h3>
-    <h3>
-      The Downsides of AI Artistry
-      What are the possible adverse effects of on-demand AI image generation?
-    </h3>
-    <h3>
-      Is VC Funding Drying Up?
-      Private funding by VC firms is down 50% YOY. We take a look at what that means.
-    </h3>
-  </aside>
-
-  <article>
-    <article>
-      <h3>
-        Reviving Retro PCs
-      </h3>
-      <p>
-        What happens when old PCs are given modern upgrades?
+  <header>
+    <img src="./assets/images/logo.svg" alt="logo" id="header__logo" />
+    <img src="./assets/images/icon-menu.svg" alt="menu-icon" id="header__icon-menu">
+    <nav>
+      <ol class="nav__menu">
+        <li>Home</li>
+        <li>New</li>
+        <li>Popular</li>
+        <li>Trending</li>
+        <li>Categories</li>
+      </ol>
+    </nav>
+  </header>
+  
+  <main>
+    <article class="featured-article">
+      <img src="./assets/images/image-web-3-mobile.jpg" alt="cover" id="featured-article__hero">
+      <h1 class="featured-article__title">
+        The Bright Future of Web 3.0?
+      </h1>
+      <p class="featured-article__description">
+        We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+        But is it really fulfilling its promise?
       </p>
+      <button class="featured-article__read-more-button">READ MORE</button>
     </article>
-    <article>
+  
+    <aside>
+      <h2>
+        New 
+      </h2>
       <h3>
-        Top 10 Laptops of 2022
+        Hydrogen VS Electric Cars
+        Will hydrogen-fueled cars ever catch up to EVs?
       </h3>
-      <p>
-        Our best picks for various needs and budgets.
-      </p>
-    </article>
-    <article>
       <h3>
-        The Growth of Gaming
+        The Downsides of AI Artistry
+        What are the possible adverse effects of on-demand AI image generation?
       </h3>
-      <p>
-        How the pandemic has sparked fresh opportunities.
-      </p>
-    </article>
-  </article>
+      <h3>
+        Is VC Funding Drying Up?
+        Private funding by VC firms is down 50% YOY. We take a look at what that means.
+      </h3>
+    </aside>
+  
+    <article>
+      <article>
+        <h3>
+          Reviving Retro PCs
+        </h3>
+        <p>
+          What happens when old PCs are given modern upgrades?
+        </p>
+      </article>
+      <article>
+        <h3>
+          Top 10 Laptops of 2022
+        </h3>
+        <p>
+          Our best picks for various needs and budgets.
+        </p>
+      </article>
+      <article>
+        <h3>
+          The Growth of Gaming
+        </h3>
+        <p>
+          How the pandemic has sparked fresh opportunities.
+        </p>
+      </article>
+    </article>    
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
