--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   
 </head>
 <body>
-  <header>
-    <img src="./assets/images/logo.svg" alt="logo" id="header__logo" />
-    <img src="./assets/images/icon-menu.svg" alt="menu-icon" id="header__icon-menu">
-    <nav>
-      <ol class="nav__menu">
+  <header class="header">
+    <img src="./assets/images/logo.svg" alt="logo" class="header__logo" />
+    <img src="./assets/images/icon-menu.svg" alt="menu-icon" class="header__icon-menu">
+    <nav class="nav mobile-nav">
+      <ol class="mobile-nav__menu">
         <li>Home</li>
         <li>New</li>
         <li>Popular</li>
@@ -27,34 +27,44 @@
   </header>
   
   <main>
-    <article class="featured-article">
-      <img src="./assets/images/image-web-3-mobile.jpg" alt="cover" id="featured-article__hero">
-      <h1 class="featured-article__title">
+    <article class="main-article">
+      <img src="./assets/images/image-web-3-mobile.jpg" alt="cover" class="main-article__hero">
+      <h1 class="main-article__title">
         The Bright Future of Web 3.0?
       </h1>
-      <p class="featured-article__description">
+      <p class="main-article__description description">
         We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
         But is it really fulfilling its promise?
       </p>
-      <button class="featured-article__read-more-button">READ MORE</button>
+      <button class="main-article__read-more-button">READ MORE</button>
     </article>
   
-    <aside>
-      <h2>
-        New 
-      </h2>
-      <h3>
-        Hydrogen VS Electric Cars
-        Will hydrogen-fueled cars ever catch up to EVs?
-      </h3>
-      <h3>
-        The Downsides of AI Artistry
-        What are the possible adverse effects of on-demand AI image generation?
-      </h3>
-      <h3>
-        Is VC Funding Drying Up?
-        Private funding by VC firms is down 50% YOY. We take a look at what that means.
-      </h3>
+    <aside class="aside-article">
+      <h2 class="aside-article__header">New</h2>
+      <article class="featured-article aside-article__featured-article">
+        <h3 class="featured-article__titles">
+          Hydrogen VS Electric Cars
+        </h3>
+        <p class="description featured-article__description">
+          Will hydrogen-fueled cars ever catch up to EVs?
+        </p>
+      </article>
+      <article class="featured-article aside-article__featured-article">
+        <h3 class="featured-article__titles">
+          The Downsides of AI Artistry
+        </h3>
+        <p class="description featured-article__description">
+          What are the possible adverse effects of on-demand AI image generation?
+        </p>
+      </article>
+      <article class="featured-article featured-article--last-article aside-article__featured-article ">
+        <h3 class="featured-article__titles ">
+          Is VC Funding Drying Up?
+        </h3>
+        <p class="description featured-article__description">
+          Private funding by VC firms is down 50% YOY. We take a look at what that means.
+        </p>
+      </article>
     </aside>
   
     <article>
