--- a/index.html
+++ b/index.html
@@ -41,63 +41,70 @@
   
     <aside class="aside-article">
       <h2 class="aside-article__header">New</h2>
-      <article class="featured-article aside-article__featured-article">
-        <h3 class="featured-article__titles">
+      <article class="fresh-article">
+        <h3 class="article-title">
           Hydrogen VS Electric Cars
         </h3>
-        <p class="description featured-article__description">
+        <p class="description description--color-off-white description--fontwght-lighter">
           Will hydrogen-fueled cars ever catch up to EVs?
         </p>
       </article>
-      <article class="featured-article aside-article__featured-article">
-        <h3 class="featured-article__titles">
+      <article class="fresh-article">
+        <h3 class="article-title">
           The Downsides of AI Artistry
         </h3>
-        <p class="description featured-article__description">
+        <p class="description description--color-off-white" description--fontwght-lighter>
           What are the possible adverse effects of on-demand AI image generation?
         </p>
       </article>
-      <article class="featured-article featured-article--last-article aside-article__featured-article ">
-        <h3 class="featured-article__titles ">
+      <article class="fresh-article fresh-article--last-article">
+        <h3 class="article-title">
           Is VC Funding Drying Up?
         </h3>
-        <p class="description featured-article__description">
+        <p class="description description--color-off-white description--fontwght-lighter">
           Private funding by VC firms is down 50% YOY. We take a look at what that means.
         </p>
       </article>
     </aside>
   
-    <article>
-      <article>
-        <h3>
-          Reviving Retro PCs
-        </h3>
-        <p>
-          What happens when old PCs are given modern upgrades?
-        </p>
+    <article class="featured-articles-container">
+      <article class="featured-article">
+        <img src="./assets/images/image-retro-pcs.jpg" alt="article-image" class="featured-article__thumbnail"/>
+        <div class="featured-article__text-container">
+          <h2 class="featured-article__article-number">01</h2>
+          <h3 class="article-title article-title--color-darkblue">
+            Reviving Retro PCs
+          </h3>
+          <p class="description description--no-margin">
+            What happens when old PCs are given modern upgrades?
+          </p>
+        </div>
       </article>
-      <article>
-        <h3>
-          Top 10 Laptops of 2022
-        </h3>
-        <p>
-          Our best picks for various needs and budgets.
-        </p>
+      <article class="featured-article">
+        <img src="./assets/images/image-top-laptops.jpg" alt="article-image" class="featured-article__thumbnail">
+        <div class="featured-article__text-container">
+          <h2 class="featured-article__article-number">02</h2>
+          <h3 class="article-title article-title--color-darkblue">
+            Top 10 Laptops of 2022
+          </h3>
+          <p class="description description--no-margin">
+            Our best picks for various needs and budgets.
+          </p>
+        </div>
       </article>
-      <article>
-        <h3>
-          The Growth of Gaming
-        </h3>
-        <p>
-          How the pandemic has sparked fresh opportunities.
-        </p>
+      <article class="featured-article">
+        <img src="./assets/images/image-gaming-growth.jpg" alt="article-image" class="featured-article__thumbnail">
+        <div class="featured-article__text-container">
+          <h2 class="featured-article__article-number">03</h2>
+          <h3 class="article-title article-title--color-darkblue">
+            The Growth of Gaming
+          </h3>
+          <p class="description description--no-margin">
+            How the pandemic has sparked fresh opportunities.
+          </p>
+        </div>
       </article>
     </article>    
   </main>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
